syntax = "proto3";

package envoy.extensions.filters.network.dubbo_proxy.v2alpha1;
option go_package = "v2";

import "validate/validate.proto";

// [#protodoc-title: Extensions Dubbo Proxy]
// Dubbo Proxy filter configuration.
message DubboProxy {
  // The human readable prefix to use when emitting statistics.
  string stat_prefix = 1 [(validate.rules).string.min_bytes = 1];
}